# medbot

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
scripts/: chat.py
src/medbot/: ai.py  bot.py  commands.py  db.py  debug.py  handlers.py  jobs.py  run.py  utils.py
